--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,6 +1,9 @@
-@use "typography.scss";
-
+@use "typography";
+@use "colors";
+@use "components/nav-bar";
 * {
   font-family: "Poppins";
-  font-size: 1rem;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
