--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "LibreBarCode128";
-  src: url("../fonts/LibreBarcode128Text-Regular.ttf") format("ttf");
+  src: url("../fonts/LibreBarcode128Text-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 //poppins
 @font-face {
   font-family: "Poppins";
-  src: url("../fonts/Poppins-Regular.ttf") format("ttf");
+  src: url("../fonts/Poppins-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
