--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,11 +1,12 @@
 @use "typography";
 @use "colors";
 @use "components/nav-bar";
+@use "components/toast";
 * {
-  font-family: "Poppins";
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins";
 }
 body {
   background-color: colors.$blue-50;
