--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -2,6 +2,7 @@
 @use "colors";
 @use "components/nav-bar";
 @use "components/toast";
+@use "components/file-loader";
 * {
   padding: 0;
   margin: 0;
