--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,6 +3,8 @@
 @use "components/nav-bar";
 @use "components/toast";
 @use "components/file-loader";
+@use "components/form-fields";
+@use "components/dialog.scss";
 * {
   padding: 0;
   margin: 0;
