--- a/assets/styles/components/form-fields.scss
+++ b/assets/styles/components/form-fields.scss
@@ -5,6 +5,11 @@
     background-color: custom-colors.$blue-100;
   }
 }
+.p-inputtext {
+  &-fluid {
+    background-color: custom-colors.$blue-100;
+  }
+}
 .p-floatlabel {
   --p-floatlabel-on-active-background: #eef2ff;
 }
