feat(data-table): add data table styles for header cells

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,6 +5,7 @@
 @use "components/file-loader";
 @use "components/form-fields";
 @use "components/dialog.scss";
+@use "components/data-table";
 * {
   padding: 0;
   margin: 0;
