feat(styles): add imports of button a select styles

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,6 +6,8 @@
 @use "components/form-fields";
 @use "components/dialog.scss";
 @use "components/data-table";
+@use "components/button.scss";
+@use "components/select.scss";
 * {
   padding: 0;
   margin: 0;
