--- a/assets/styles/components/dialog.scss
+++ b/assets/styles/components/dialog.scss
@@ -1,4 +1,4 @@
 @use "../colors" as custom-colors;
 .p-dialog {
-  background-color: custom-colors.$blue-100;
+  --p-dialog-background: #{custom-colors.$blue-100};
 }
