--- a/assets/styles/components/nav-bar.scss
+++ b/assets/styles/components/nav-bar.scss
@@ -1,16 +1,13 @@
 @use "../colors" as custom-colors;
 .p-menubar {
-  display: flex;
-  background-color: custom-colors.$blue-950;
-  border-radius: 0 0 0.5rem 0.5rem;
-  border: none;
+  --p-menubar-background: #{custom-colors.$blue-950};
+  --p-menubar-border-color: #{custom-colors.$blue-950};
+  --p-menubar-border-radius: 0 0 0.5rem 0.5rem;
+  --p-menubar-padding: 1rem;
   padding: 1rem;
   &-root-list {
     flex-grow: 1;
     justify-content: center;
-  }
-  &-start {
-    display: flex;
   }
   &-end {
     display: flex;
@@ -19,15 +16,15 @@
   }
   &-item {
     &-content {
-      color: custom-colors.$text-secondary;
+      --p-menubar-item-color: #{custom-colors.$text-secondary};
       font-size: 1rem;
     }
   }
   &-submenu {
-    background-color: custom-colors.$blue-950;
     border: none;
   }
   &-mobile {
+    --p-menubar-submenu-background: #{custom-colors.$blue-950};
     margin: 0;
     border-radius: 0;
     border: none;
@@ -50,7 +47,7 @@
       }
       &-item {
         &-content {
-          color: custom-colors.$text-secondary;
+          --p-menubar-item-color: #{custom-colors.$text-secondary};
           font-size: 0.7rem;
         }
       }
