--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,10 +16,12 @@
 body {
   background-color: colors.$blue-50;
 }
-
 .p-paginator {
-  background-color: colors.$blue-50;
+  --p-paginator-background: #{colors.$blue-50};
 }
 .p-confirmdialog-message {
   white-space: pre-line;
+}
+.p-dataview-empty-message {
+  padding: 0 1em;
 }
